NextGenAppPackage/main/default/objects/Dia__c/Dia__c.object-meta.xml
<CustomObject>
    <label>Día</label>
    <nameField>
        <label>Día</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Días</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>