NextGenAppPackage/main/default/objects/Dia__c/fields/Dia_de_la_semana__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_la_semana__c</fullName>
    <formula>CASE( MOD(  Fecha__c  - DATE(1900, 1, 7), 7), 0, &quot;Domingo&quot;, 1, &quot;Lunes&quot;, 2, &quot;Martes&quot;, 3,
&quot;Miércoles&quot;, 4, &quot;Jueves&quot;, 5, &quot;Viernes&quot;, 6, &quot;Sábado&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia de la semana</label>
    <type>Text</type>
</CustomField>