NextGenAppPackage/main/default/objects/Dia__c/fields/Numero_de_comidas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_comidas__c</fullName>
    <label>Número de comidas</label>
    <summaryForeignKey>Plato_Dia__c.Dia__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>