NextGenAppPackage/main/default/objects/Dia__c/fields/Semana__c.field-meta.xml
<CustomField>
    <fullName>Semana__c</fullName>
    <label>Semana</label>
    <referenceTo>Semana__c</referenceTo>
    <relationshipLabel>Días</relationshipLabel>
    <relationshipName>Dias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>